feat: add product category labels and enhance type definitions for product and variant